# css-matrix-completion

./: README.md  pyproject.toml  torch_least_squares.ipynb
examples/: benchmark.py  benchmark_images.py  benchmark_torch.py  dask.ipynb  draw.ipynb  draw_images.ipynb  pics.ipynb  synthetic_data.ipynb  synthetic_data.py  test.py  test_ls.ipynb
examples/DATA/PICS/: kasia.pgm  most.pgm  zagle.pgm
src/css_matrix_completion/: css.py  cssmc.py  mc.py  transform.py
src/css_matrix_completion/errors/: errors.py
src/css_matrix_completion/mc/: nn_completion.py  soft_impute.py
src/cv/: cross_validation.py
tests/: test_css_matrix_completion.py
utils/: data_generation.py  linear_algebra.py
